fdo#44736 speed up RTF import a bit by sorting keywords

If we sort the keywords once in the constructor, then we can do binary
search when looking up RTF keywords, and that speeds up the import by
about 20% using the first testcase from the bug.